[project]
name = "ai-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "langgraph-cli[inmem]>=0.4.4",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]